syntax = "proto3";

package service.ourchat.session.set_session_info.v1;

message SetSessionInfoRequest {
  uint64 session_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string avatar_key = 4;
}

message SetSessionInfoResponse {}
